# LexonFabric

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/skills/evolve/: SKILL.md
.github/skills/evolve-lexonarchivebuilder/: SKILL.md
.github/skills/evolve-lexonfabric/: SKILL.md
.github/skills/maintain/: SKILL.md
.github/skills/maintain-lexonarchivebuilder/: SKILL.md
.github/skills/maintain-lexonfabric/: SKILL.md
.github/workflows/: ci.yml
crates/lexonarchivebuilder-indexer/: Cargo.toml  Dockerfile  Dockerfile.scale-test
crates/lexonarchivebuilder-indexer/src/: config.rs  embedding.rs  lib.rs  mailbox.rs  main.rs  paths.rs  quality.rs  resolver.rs  runtime.rs  search.rs  tree_tools.rs
crates/lexonarchivebuilder-mcp/: Cargo.toml  Dockerfile
crates/lexonarchivebuilder-mcp/src/: config.rs  lib.rs  main.rs  runtime.rs  server.rs
crates/lexonfabric-indexer/: Cargo.toml  Dockerfile  Dockerfile.scale-test
crates/lexonfabric-indexer/src/: block_store.rs  config.rs  embedding.rs  lib.rs  mailbox.rs  main.rs  resolver.rs  runtime.rs
crates/lexonfabric-mcp/: Cargo.toml  Dockerfile
crates/lexonfabric-mcp/src/: config.rs  lib.rs  main.rs  runtime.rs  server.rs
docs/specs/lexonarchivebuilder-indexer/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-mcp/: design.md  requirements.md  validation.md
docs/specs/lexonarchivebuilder-scale-test/: design.md  requirements.md  validation.md
docs/specs/lexonfabric-indexer/: design.md  requirements.md  validation.md
docs/specs/lexonfabric-mcp/: design.md  requirements.md  validation.md
docs/specs/lexonfabric-scale-test/: design.md  requirements.md  validation.md
docs/specs/rust-workspace-ci/: design.md  requirements.md  validation.md
examples/local/: mcp.request.sample.json  request.sample.json
examples/local/data/documents/: overview.txt
examples/local/data/mail/: 2026-01.mbox
examples/local/scale-test/: rsync.sources.sample.txt
scripts/: lexonarchivebuilder-scale-test-compose-smoke.sh  lexonarchivebuilder-scale-test-smoke.sh  lexonarchivebuilder-scale-test.sh  lexonfabric-scale-test-compose-smoke.sh  lexonfabric-scale-test-smoke.sh  lexonfabric-scale-test.sh
