[workspace]
members = ["crates/lexonarchivebuilder-indexer", "crates/lexonarchivebuilder-mcp"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
ciborium = "0.2.2"
clap = { version = "4.5.53", features = ["derive"] }
half = "2.7.1"
num_cpus = "1.17.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }

lexonarchivebuilder-indexer = { path = "crates/lexonarchivebuilder-indexer" }
lexongraph-block = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "dd8825f9831c1fa7ff1c5ebf4c78626851c2afbc", package = "lexongraph-block" }
lexongraph-block-store = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "dd8825f9831c1fa7ff1c5ebf4c78626851c2afbc", package = "lexongraph-block-store" }
lexongraph-block-store-fs = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "dd8825f9831c1fa7ff1c5ebf4c78626851c2afbc", package = "lexongraph-block-store-fs" }
lexongraph-directional-pca = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "dd8825f9831c1fa7ff1c5ebf4c78626851c2afbc", package = "lexongraph-directional-pca" }
lexongraph-embeddings-trait = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "dd8825f9831c1fa7ff1c5ebf4c78626851c2afbc", package = "lexongraph-embeddings-trait" }
lexongraph-search = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "dd8825f9831c1fa7ff1c5ebf4c78626851c2afbc", package = "lexongraph-search" }
lexongraph-streaming-indexer = { git = "https://github.com/Alan-Jowett/LexonGraph", rev = "dd8825f9831c1fa7ff1c5ebf4c78626851c2afbc", package = "lexongraph-streaming-indexer" }
